# pickem_pete

./: .gitignore  bot.py  pyproject.toml
